# oteapi-dlite-Mod

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: cd_release.yml  ci_tests.yml
docs/api_reference/strategies/: generate_mpr.md  parse_mpr.md
oteapi_dlite/strategies/: generate.py  generate_mpr.py  influx_parser.py  mapping.py  oceanlab_influx_parser.py  oceanlab_parser.py  parse_json.py  parse_mpr.py
tests/strategies/: test_influx_db_parser.py
