[options.entry_points]
oteapi.parse =
  oteapi_dlite.application/vnd.dlite-parse = oteapi_dlite.strategies.parse:DLiteParseStrategy

  oteapi_dlite.application/vnd.dlite-xlsx = oteapi_dlite.strategies.parse_excel:DLiteExcelStrategy
  oteapi_dlite.influx/vnd.dlite-influx = oteapi_dlite.strategies.oceanlab_parser:DLiteJsonStrategyOceanLab
   oteapi_dlite.json/vnd.dlite-json = oteapi_dlite.strategies.parse_json:DLiteJsonStrategy
  oteapi_dlite.image/vnd.dlite-image = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy

oteapi.function =
  oteapi_dlite.application/vnd.dlite-generate = oteapi_dlite.strategies.generate:DLiteGenerateStrategy
  # oteapi_dlite.application/vnd.dlite-generate = oteapi_dlite.strategies.generator_ocean_data:DLiteGenerateStrategyOceanData

oteapi.mapping =
  oteapi_dlite.mappings = oteapi_dlite.strategies.mapping:DLiteMappingStrategy

oteapi.filter =
  oteapi_dlite.dlite/filter = oteapi_dlite.strategies.filter:DLiteFilterStrategy
